[Fix] collect(Collectors.toList()) -> toList()로 수정